--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "source": "https://github.com/zelenin/telegram-bot-api"
     },
     "require": {
-        "guzzlehttp/guzzle": "~6"
+        "php": ">=5.5.0",
+        "guzzlehttp/guzzle": "~6",
+        "amphp/amp": "~1.0"
     },
     "autoload": {
         "psr-4": {
