--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
         "guzzlehttp/guzzle": "~6",
         "amphp/amp": "~1.0"
     },
+    "suggest": {
+        "ext/pcntl": "Usage of signal handler"
+    },
     "autoload": {
         "psr-4": {
             "Zelenin\\Telegram\\Bot\\": ""
